manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: k8s-challenge
  name: k8s-challenge
  selfLink: /api/v1/namespaces/default/services/k8s-challenge
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 4000
  selector:
    app: k8s-challenge
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
