manifest/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: k8s-challenge
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app: k8s-challenge
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: k8s-challenge
          servicePort: 80
